--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p>My favourite color is 
+			<span class="favourite-color">Red</span>
+		</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
