--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<p>My favourite color is 
+		<p>My favorite color is 
 			<span class="favourite-color">Red</span>
 		</p>
 	</div>
