--- a/main.html
+++ b/main.html
@@ -9,9 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<p>My favorite color is red
-			<span class="favourite-color">Red</span>
-		</p>
+		<p class="color-name">My favourite color is <span class="favourite-color" value="favourite-color">Red</span></p>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
