--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-		<p class="color-name">My favourite color is <span class="favourite-color" value="favourite-color">Red</span></p>
+		<p class="color-name">My favorite color is <span class="favorite-color" value="favorite-color">Red</span></p>
     <script type="text/javascript" src="./script.js">
 </script>
 
